--- a/HelloWorldSpring/build.gradle
+++ b/HelloWorldSpring/build.gradle
@@ -17,6 +17,9 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'war'
+apply plugin: 'jetty'
+
+httpPort = 8087
 
 war {
     baseName = 'helloworld'
