--- a/NoticiaApp/NoticiaApp/Web.config
+++ b/NoticiaApp/NoticiaApp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Noticia-20150519073519.mdf;Initial Catalog=aspnet-Noticia-20150519073519;Integrated Security=True"
+    <add name="noticiaapp" connectionString="Server=MAQUINA-12-PC;Database=noticiaapp;Trusted_Connection=True;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
