enviando implementação de envio de e-mail

--- a/NoticiaApp/NoticiaApp/NoticiaApp.csproj
+++ b/NoticiaApp/NoticiaApp/NoticiaApp.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DBContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Mail.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Noticia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
